root was too far "down" in the navigation yaml

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,6 +1,6 @@
 - name: Home
-  link: /
+  link: /AquaPanix/
 - name: About
-  link: /about.html
+  link: /AquaPanix/about.html
 - name: Blog
-  link: /blog.html
+  link: /AquaPanix/blog.html
