--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -6,5 +6,5 @@
   link: /AquaPanix/blog.html
 - name: Electronics
   link: /AquaPanix/TechList
-- name: README
+- name: ReadMe
   link: /AquaPanix/README
