Updated description to make it shorter

--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
 theme: jekyll-theme-architect
 title: AquaPanix
-description: My thoughst and progress on testing out Aquaponics. This will help me keep track and hopefully it eveutaully helps someone else.
-google_analytics: UA-172691907-1 
+description: My thoughst and progress on testing out Aquaponics.
+google_analytics: UA-172691907-1
