Move parts list to its own page.

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -6,5 +6,7 @@
   link: /AquaPanix/blog.html
 - name: Electronics
   link: /AquaPanix/TechList
+- name: Parts
+  link: /Aquapanix/PartsList
 - name: ReadMe
   link: /AquaPanix/README
