Fixed typo in navi

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -7,6 +7,6 @@
 - name: Electronics
   link: /AquaPanix/TechList
 - name: Parts
-  link: /Aquapanix/PartsList
+  link: /AquaPanix/PartsList
 - name: ReadMe
   link: /AquaPanix/README
