--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
 theme: jekyll-theme-architect
 title: AquaPanix
-description: My thoughst and progress on trying out Aquaponics.
+description: My thoughts and progress on trying out Aquaponics.
 google_analytics: UA-172691907-1
